<resources>
    <string name="app_name">RasainApp</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loginText">Login</string>
    <string name="txtPass">Password</string>
    <string name="txtSignUp">Sign Up</string>
    <string name="txtSignIn">Sign In</string>
    <string name="txtEmail">Email</string>
    <string name="email_edit_text">Email Address</string>
    <string name="password_edit_text">Password</string>
    <string name="welcome_user">Welcome, %s</string>
    <string name="desc_app">Let’s cook healthier \nand cleaner food together</string>
    <string name="search_food">Search food…</string>
    <string name="category">Category</string>
    <string name="food">Food</string>
    <string name="food_by_category">Food by Category</string>
    <string name="title_logout_confirmation">Logout</string>
    <string name="logout_confirmation">Are you sure want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name_edit_text">Full Name</string>
    <string name="register">Register</string>
    <string name="txtRegister">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_result">Are you looking for \'%s\'?</string>
    <string name="search_result">Result for \'%s\'</string>
    <string name="new_recipe">New Recipe~</string>
    <string name="view_all">View All</string>
    <string name="hide">Hide</string>
    <string name="ingredient">Ingredient</string>
    <string name="how_to_cook_it">How to cook it</string>
    <string name="description">Description</string>
    <string name="dont_have_account">Don\'t Have Account?</string>
    <string name="register_here">Register Here!</string>
    <string name="for_successful_guidelines">For successful get recipe that you want, let\'s follow these guidelines:</string>
    <string name="make_sure_your_food_photo_taken_from_the_top">Make sure your food photo taken from the top</string>
    <string name="make_sure_your_food_photo_has_the_light_as_good_as_well">Make sure your food photo has the light as good as well</string>
    <string name="make_sure_your_food_photo_is_original_food">Make sure your food photo is original food</string>
    <string name="make_sure_your_food_from_indonesian_food">Make sure your food from indonesian food</string>
    <string name="ready_to_upload">Let\'s check your food photo is ready to upload!</string>
    <string name="upload">Upload</string>
    <string name="retake">Retake</string>
    <string name="your_favorite_still_empty">Your Favorite Still Empty</string>
    <string name="user_information">User Information</string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="article">Article</string>
    <string name="profile">Profile</string>
</resources>